2006-11-25  Per Bothner  <per@bothner.com>

	* XQParser.java: Update XDataType -> TextUtils.
	* XQResolveNames.java: Upadte StringValue -> TextUtils.

	* XQuery.java: Add declaration of fn:normalize-unicode.

2006-11-24  Per Bothner  <per@bothner.com>

	* XQParser.java (parseDataType): Re-organize so we get error message
	if we see empty-sequence for 'cast as'/'castable as'.

	* XQResolveNames.java (CAST_AS_BUILTIN,
	CASTABLE_AS_BUILTIN): New constants.
	(castAsDecl, castableAsDecl): New static fields.
	(walkApplyExp): Support new builtins.  Specifically, inline literals
	in the QName case as required.
	* XQParser.java (parseBinaryExpr): Use new decls for OP_CASTABLE_AS
	and OP_CAST_AS.
	(castQName): Make static and chaneg return type - for walkApplyExp.

	* XQParser.java (parseTypeSwitch): Error if pedantic and no default.

2006-11-23  Per Bothner  <per@bothner.com>

	* XQParser.java (parseRelativePathExpr): Set dot's type.
	(parseStepQualifiers): Likewise.

2006-11-22  Per Bothner  <per@bothner.com>

	* XQResolveNames.java (walkApplyExp): On position() and last()
	set can-read flag on corresponding Declaration.

	* XQParser.java (parseContent): Don't "optimize" simple text to
	avoid use of MakeText, since the latter is now optimized.
	(parseElementConstructor): Now needs to unwrap MakeText.

2006-11-16  Per Bothner  <per@bothner.com>

	* XQParser.java (stringValue): Remove static method.
	(stringValueMethod): Remove static field.
	(parseContent): Don't need to take sprintValue here - now handled
	by XMLFilter.

	* XQParser.java (orderingModeSeen): New field.
	(parse): Error if duplicate ordering declaration.

2006-11-15  Per Bothner  <per@bothner.com>

	* XQParser.java (parseURILiteral): Normalize whitespace.

2006-11-14  Per Bothner  <per@bothner.com>

	* XQParser.java: Update for functionality moved NodeTree -> XMLFilter.
	* XQResolveNames.java: Likewise.

2006-11-13  Per Bothner  <per@bothner.com>

	* XQParser.java: Update.
	* XQResolveNames.java: Likewise.
